# pose_IoHook

./: Dockerfile  docker-compose.yml
workspace/: RTSP.py
workspace/EfficientPose/: inference_video.py  inference_webcam.py
workspace/EfficientPose/utils/: compute_overlap.c  visualization.py
workspace/camera_calibration/: calibration_chessboard.yaml  camera.py  camera_calibration.py
workspace/ros2_ws/install/: setup.sh  setup.zsh
workspace/ros2_ws/install/camera_reader/lib/camera_reader/: camera_reader_node
workspace/ros2_ws/install/camera_reader/share/camera_reader/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/ros2_ws/install/camera_reader/share/camera_reader/cmake/: camera_readerConfig.cmake
workspace/ros2_ws/install/camera_reader/share/camera_reader/launch/: camera_launcher.launch.py
workspace/ros2_ws/install/camera_testing/lib/camera_testing/: camera_testing_node
workspace/ros2_ws/install/camera_testing/share/camera_testing/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/ros2_ws/install/camera_testing/share/camera_testing/src/: video_publisher.cpp
workspace/ros2_ws/install/inference_webcam/lib/inference_webcam/: inference.launch.py  ros2_inference_ladle_hook.py
workspace/ros2_ws/install/inference_webcam/share/inference_webcam/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/ros2_ws/install/inference_webcam/share/inference_webcam/cmake/: inference_webcamConfig.cmake
workspace/ros2_ws/install/mesh_description/share/mesh_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/ros2_ws/install/mesh_description/share/mesh_description/cmake/: mesh_descriptionConfig.cmake
workspace/ros2_ws/install/rosapi/share/rosapi/: local_setup.sh  package.sh
workspace/ros2_ws/install/rosapi_msgs/share/rosapi_msgs/: package.sh
workspace/ros2_ws/install/rosbridge_library/share/rosbridge_library/: package.sh
workspace/ros2_ws/install/rosbridge_msgs/share/rosbridge_msgs/: package.sh
workspace/ros2_ws/install/rosbridge_server/share/rosbridge_server/: package.sh
workspace/ros2_ws/install/rosbridge_suite/share/rosbridge_suite/: local_setup.sh  package.sh
workspace/ros2_ws/install/rosbridge_test_msgs/share/rosbridge_test_msgs/: package.sh
workspace/ros2_ws/log/: latest_build
workspace/ros2_ws/src/camera_reader/: CMakeLists.txt
workspace/ros2_ws/src/camera_reader/config/: params.yaml
workspace/ros2_ws/src/camera_reader/src/: camera_reader_node.cpp
workspace/ros2_ws/src/camera_testing/: CMakeLists.txt  package.xml
workspace/ros2_ws/src/camera_testing/src/: video_publisher.cpp
workspace/ros2_ws/src/inference_webcam/: CMakeLists.txt  package.xml
workspace/ros2_ws/src/inference_webcam/launch/: inference.launch.py
workspace/ros2_ws/src/inference_webcam/scripts/EfficientPose/: ros2_inference.py
workspace/ros2_ws/src/mesh_description/: CMakeLists.txt
workspace/ros2_ws/src/mesh_description/launch/: display.launch.py
(+394 files in other folders)
